--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -12,6 +12,8 @@ db.sqlite3-journal
 media
 static
 
+!djproject/static/
+
 *.sock
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
