--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,8 +21,8 @@ services:
       - backend/.env
     volumes:
       - ./backend:/web/djproject
-      - static_files:/web/djproject/static:delegated
-      - media_files:/web/djproject/media:delegated
+      - ./backend/static/:/web/djproject/static:delegated
+      - ./backend/media/:/web/djproject/media:delegated
     ports:
       - "8000:8000"
 
@@ -40,5 +40,3 @@ services:
 
 volumes:
   postgres_data:
-  static_files:
-  media_files:
