Update: updated ./backend/Makefile

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -1,11 +1,11 @@
 makemigrations:
-	sudo docker-compose run --rm web python manage.py makemigrations
+	sudo docker-compose exec web python manage.py makemigrations
 
 migrate:
-	sudo docker-compose run --rm web python manage.py migrate
+	sudo docker-compose exec web python manage.py migrate
 
 createsuperuser:
-	sudo docker-compose run --rm web python manage.py createsuperuser
+	sudo docker-compose exec web python manage.py createsuperuser
 
 collectstatic:
-	sudo docker-compose run --rm web python manage.py collectstatic --no-input
+	sudo docker-compose exec web python manage.py collectstatic --no-input
