--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,17 +4,17 @@ LABEL maintainer="stuleo"
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
-WORKDIR /web/djproject
+WORKDIR /web/djproject/backend/
 
 COPY requirements.txt ./
 
 RUN pip install --upgrade pip && \
     pip install -r ./requirements.txt
 
-ENV PATH="/web/djproject/venv/bin:$PATH"
+ENV PATH="/web/djproject/backend/venv/bin:$PATH"
 
-COPY entrypoint.sh /web/djproject/entrypoint.sh
-RUN chmod +x /web/djproject/entrypoint.sh
+COPY entrypoint.sh /web/djproject/backend/entrypoint.sh
+RUN chmod +x /web/djproject/backend/entrypoint.sh
 
 COPY . .
 
@@ -22,4 +22,4 @@ RUN apk add bash
 
 EXPOSE 8000
 
-ENTRYPOINT ["bash", "/web/djproject/entrypoint.sh"]
+ENTRYPOINT ["bash", "/web/djproject/backend/entrypoint.sh"]
